--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
 #map {
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 90%;
+    overflow: hidden;
+    position: relative;
 }
 
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+.container{
+    width:100%;
+    margin:auto;
+    overflow:hidden;
+  }
+
+header nav{
+    float: right;
+    margin-top: 10px;
+}
+
+
+.main_body{
+    position: relative;
+    width:100%;
+    height:1000px;
 }
