--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 #map {
     height: 80%;
     width: 90%;
+    display: flex;
     overflow: hidden;
     position: relative;
+    z-index: -1;
 }
 
 html, body {
@@ -25,6 +27,8 @@ header nav{
 
 .main_body{
     position: relative;
+    display: flex;
+    z-index: 1;
     width:100%;
     height:1000px;
 }
