--- a/style.css
+++ b/style.css
@@ -30,5 +30,10 @@ header nav{
     display: flex;
     z-index: 1;
     width:100%;
-    height:1000px;
+    
+}
+
+#myChart{
+    width: 500px;
+    height: 500px;
 }
