--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header nav{
 }
 
 #myChart{
-    width: 500px;
-    height: 500px;
+    width: 40vh;
+    height: 40vh;
+    position: relative;
 }
