--- a/style.css
+++ b/style.css
@@ -30,7 +30,12 @@ header nav{
     display: flex;
     z-index: 1;
     width:100%;
+    height: 100%;
     
+}
+
+#chart-container{
+    width: auto;
 }
 
 #myChart{
