--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     display: flex;
     overflow: hidden;
     position: relative;
-    
 }
 
 html, body {
@@ -24,6 +23,10 @@ header nav{
     margin-top: 10px;
 }
 
+#nav-btn{
+    padding: 10px;
+    margin: 20px;
+}
 
 .main_body{
     position: relative;
