--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    display: block;
 }
 
 .container{
@@ -21,11 +22,6 @@ html, body {
 header nav{
     float: right;
     margin-top: 10px;
-}
-
-#nav-btn{
-    padding: 10px;
-    margin: 20px;
 }
 
 .main_body{
@@ -48,5 +44,15 @@ header nav{
 #myChart{
     width: 500px;
     height: 500px;
+    position: relative;
+}
+
+#main-labels{
+    background-color: olive;
+}
+
+#nav-btn{
+    padding: 10px;
+    margin: 20px;
     position: relative;
 }
