--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-#map {
-    height: 80%;
-    width: 90%;
-    display: flex;
-    overflow: hidden;
-    position: relative;
-}
-
 html, body {
     height: 100%;
     margin: 0;
@@ -13,23 +5,39 @@ html, body {
     display: block;
 }
 
-.container{
-    width:100%;
-    margin:auto;
-    overflow:hidden;
+.container {
+    position: relative;
+    width: 200px;
+    height: 90px;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-.main_body{
+  #header{
     position: relative;
-    display: flex;
-    z-index: 1;
-    width:100%;
-    height: 100%;
-    
+    background-color: rgb(128, 128, 0, 0.7 );
+    text-align: center;
+    border: 5px rgb(128, 128, 0, 0.7 );
+    border-radius: 50px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
 }
 
-#chart-container{
-    width: 800px;
+.container nav{
+    position: absolute;
+    text-align: center;
+}
+
+#map {
+    height: 90%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid white;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 #main-labels{
@@ -38,6 +46,29 @@ html, body {
 
 #nav-btn{
     padding: 10px;
-    margin: 20px;
+    margin: 10px;
     position: relative;
+    align-items: center;
+}
+
+#chart-main{
+    width: 100%;
+    height: 100%;
+}
+
+#chart-legend{
+    position: relative;
+}
+
+#tree{
+    position: absolute;
+    opacity: 0.15;
+}
+
+#chart-container{
+    margin: 100px;
+    width: 900px;
+    height: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
