--- a/style/style.css
+++ b/style/style.css
@@ -42,13 +42,21 @@ html, body {
 
 #main-labels{
     background-color: olive;
+    padding: 10px;
+    margin-top: 15px;
 }
 
 #nav-btn{
-    padding: 10px;
-    margin: 10px;
-    position: relative;
+    display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+#data-btn, #photo-btn{
+    width: 100%;
+    font-weight: bold;
+    padding: 20px;
+    margin: 10px;
 }
 
 #chart-main{
@@ -73,3 +81,42 @@ html, body {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+
+/*tabs*/
+
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
